# tarefas-abandonadas-pyspark

./: .gitignore  Untitled.ipynb  pyproject.toml  tasks_dataframe.ipynb
data/: amostragem.csv
src/clients/: dynamodb_client.py  spark_client.py
