[project]
name = "test-spark"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=4.0.0,<5.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "boto3 (>=1.38.29,<2.0.0)"
]

[tool.poetry]
packages = [{include = "test_spark", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
